WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306598
REGRESSION: Scrolling during low frame rate (LFR) leads to unresponsive touch events on iOS 26
https://bugs.webkit.org/show_bug.cgi?id=306598
Summary
REGRESSION: Scrolling during low frame rate (LFR) leads to unresponsive touch...
qfqf456456
Reported
2026-01-29 22:37:27 PST
Created
attachment 478199
[details]
Screen recording demonstrating touch unresponsiveness triggered by rapid vertical scrolling on iOS 26. A critical issue has been identified on iOS 26 where frequent and rapid scrolling/swiping gestures lead to a complete loss of touch responsiveness. Once the issue is triggered, the page no longer responds to any scrolling or tapping events. URL:
https://qfqf456456.github.io/qfqf456456-IOS26TouchDemo/
Steps to Reproduce: 1. Open the provided URL on a device running iOS 26. 2. Perform rapid and frequent swiping/scrolling gestures vertically on the page. 3. Continue the scrolling interaction for a few seconds. OS Version: iOS 26.2 Additional Context: This behavior is consistently reproducible on the provided demo page under high-frequency touch interaction.
Attachments
Screen recording demonstrating touch unresponsiveness triggered by rapid vertical scrolling on iOS 26.
(2.24 MB, video/mp4)
2026-01-29 22:37 PST
,
qfqf456456
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-30 08:47:08 PST
<
rdar://problem/169279665
>
Simon Fraser (smfr)
Comment 2
2026-02-02 10:41:27 PST
I can reproduce poor scrolling on the testcase. The test page uses canvas to render, so it's not really scrolling.
Simon Fraser (smfr)
Comment 3
2026-02-02 10:44:49 PST
It's actually WebGL.
roberto_rodriguez2
Comment 4
2026-02-23 13:20:21 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59255
EWS
Comment 5
2026-02-25 15:04:29 PST
Committed
308237@main
(a1a65ba028eb): <
https://commits.webkit.org/308237@main
> Reviewed commits have been landed. Closing PR #59255 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug